<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg"
    android:paddingHorizontal="20dp"
    tools:context=".view.ProjectShowFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/projects"
        android:paddingVertical="5dp"
        android:textColor="@color/txtTitle"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/qanelabolt"/>

    <include android:id="@+id/photo" layout="@layout/component_photo"/>

    <include android:id="@+id/send" layout="@layout/component_send"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_weight="1.7"
            android:text="@string/code_project"
            android:textStyle="bold"
            android:textColor="@color/greenccip"
            android:gravity="start" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="2.5dp"
        android:weightSum="2"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="13sp"
            android:textColor="@color/txt"
            android:text="@string/description" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="@color/txt"
            android:layout_weight="1"
            android:textAlignment="textEnd" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:layout_marginTop="15dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/txt" />

    <EditText
        android:id="@+id/addescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/txt"
        android:textSize="16sp"
        android:hint="@string/enter_description"
        android:paddingHorizontal="0dp"
        android:paddingVertical="16dp"
        android:inputType="text"/>

</LinearLayout>