<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azulccip"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingHorizontal="30dp"
    tools:context=".view.AuthActivity">

    <ImageView
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="45dp"
        android:src="@drawable/logo_ccip_white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/textlogin"
        android:text="@string/enter_dni"/>

    <EditText
        android:id="@+id/dniUsers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:maxLength="8"
        android:contentDescription="@string/enter_dni"
        android:textColor="@color/editwhite"
        android:inputType="number"
        android:autofillHints="creditCardNumber"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/textlogin"
        android:text="@string/enter_password"/>

    <EditText
        android:id="@+id/passwordUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:contentDescription="@string/enter_password"
        android:textColor="@color/editwhite"
        android:inputType="textPassword"
        android:autofillHints="password" />

    <Button
        android:id="@+id/BtnAuth"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="#0C51DC"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:text="@string/Login" />

</LinearLayout>