<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg"
    android:paddingHorizontal="20dp"
    tools:context=".view.PreProjectEspecificFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.8"
            android:text="@string/preprojects"
            android:paddingVertical="5dp"
            android:textColor="@color/txtTitle"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="@font/qanelabolt"/>

        <Button
            android:id="@+id/imagesCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:background="@drawable/baseline_checklist_rtl_24" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Codigo de Anteproyecto"
                    android:paddingVertical="5dp"
                    android:textColor="@color/txtTitle"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/qanelabolt"/>

                <TextView
                    android:id="@+id/codePreproject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:layout_weight="1.7"
                    android:text="@string/code_preproject"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Escenario"
                    android:paddingVertical="5dp"
                    android:textColor="@color/txtTitle"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/qanelabolt"/>

                <TextView
                    android:id="@+id/codePhoto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:text="code_photo"
                    android:textColor="@color/black"
                    android:gravity="start" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Descripcion del Escenario"
                    android:paddingVertical="5dp"
                    android:textColor="@color/txtTitle"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/qanelabolt"/>

                <TextView
                    android:id="@+id/codeDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:text="descripcion de escenario"
                    android:textColor="@color/black"
                    android:gravity="start" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Estatus"
                    android:paddingVertical="5dp"
                    android:textColor="@color/txtTitle"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/qanelabolt"/>

                <TextView
                    android:id="@+id/codeStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:text="Estatus de escenario"
                    android:textColor="@color/black"
                    android:gravity="start" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/txt" />

                <EditText
                    android:id="@+id/addDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/txt"
                    android:textSize="17sp"
                    android:hint="@string/enter_description"
                    android:paddingVertical="16dp"
                    android:inputType="textMultiLine" />
            </LinearLayout>

            <include android:id="@+id/photo" layout="@layout/component_photo"/>

            <include android:id="@+id/send" layout="@layout/component_send"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
